--- a/d01/index.html
+++ b/d01/index.html
@@ -10,7 +10,7 @@
     <h1>Desafio das Mensagens</h1>
     <h3>
         *Um <br> **Dois <br> ***Três <br> ****Quatro <br>
-        <br>****Quatro <br> ***Três <br> **Dois <br>*Um <br>
+        <p>****Quatro <br> ***Três <br> **Dois <br>*Um <br></p>
     </h3>
 </body>
 </html>
